# atelier.ai

./: .env  .gitignore  README.md  main.py  pyproject.toml  requirements.md
agents/sketchup/: __init__.py  base_agent.py  check.py  export_view.py  material.py  modeling_3d.py
agents/sketchup/prompts/: check.md  export_view.md  material.md  modeling.md
bridge/: __init__.py  sketchup_mcp.py
contracts/: __init__.py  model_schema.py
explore/: models.py  sketchup_recording.yaml
explore/prompts/: check_system.md  export_view_system.md  gateway_system.md  material_system.md  modeling_3d_system.md
gateway/: __init__.py  fsm_engine.py  gateway.py  scoring_generator.py
gateway/prompts/: gateway.md
recorder/: schema.py
recorder/adapters/sketchup/: observer.rb
tests/: test_main.py
tests/agents/: test_base_agent.py  test_check.py  test_export_view.py  test_material.py  test_modeling_3d.py
tests/bridge/: test_sketchup_mcp.py
tests/contracts/: test_check.py  test_criteria_types.py  test_fsm.py  test_gateway_io.py  test_task.py
tests/gateway/: test_fsm_engine.py  test_gateway.py  test_scoring_generator.py
